-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
d2921ffc52fed380326f8abb86d6d659cc47f9d1
In debug mode, the v8engine's object comparison callback will crash if one of the arguments to the comparison is a value-type but the other is a non-value type.
import QtQuick 2.0 Item { property variant p1: Qt.point(1,2) property variant p2: {"x":1, "y":2} Component.onCompleted: { console.log("p1 == p2 : " + (p1 == p2)) } }
For Gerrit Dashboard: QTBUG-24489 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
17528,2 | Check engine equality condition inside null ptr check | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |